fixed shift pop bug in currentBank, added favicon

--- a/css/main.css
+++ b/css/main.css
@@ -164,3 +164,7 @@ td {
   overflow: hidden;
   color:black;
 }
+
+del { 
+cursor:pointer; 
+}
